feat: 🎸 Hero section done

--- a/index.html
+++ b/index.html
@@ -18,35 +18,58 @@
     <!-- font inject -->
   </head>
   <body>
-    <!-- header section -->
-    <header id="header-section">
-      <nav class="nav container">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-        <!-- logo -->
-        <div>
-          <img src="assets/svg/logo.svg" alt="logo" />
+    <div class="header__and__navbar">
+      <!-- background element -->
+      <div class="circle__dashed__line d-flex-center">
+        <div class="circle__image-heroSection">
+          <!-- <img src="/assets/images/circle-image.png" alt="" /> -->
         </div>
-        <!-- logo -->
-        <ul>
-          <li><a href="#">Cabins</a></li>
-          <li><a href="#">Reserve</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- header section -->
+      </div>
 
-    <!-- main section-->
-    <main>
+      <!-- background element -->
+      <!-- header section -->
+      <header id="header-section" class="header__section">
+        <nav class="nav container">
+          <ul>
+            <li><a href="#" class="">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+          <!-- logo -->
+          <div class="logo__in__navbar">
+            <img src="assets/svg/logo.svg" alt="logo" />
+            <span>Grindelwald</span>
+          </div>
+          <!-- logo -->
+          <ul>
+            <li><a href="#">Cabins</a></li>
+            <li><a href="#">Reserve</a></li>
+          </ul>
+        </nav>
+      </header>
+
       <section id="hero-section" class="hero__section">
-        <div class="hero__text container m-auto">
-          <h1 class="boska-extralight-italic">Welcome to Static Mania</h1>
-          <p>Discover the beauty of nature at its finest</p>
+        <div class="hero__text container text-center d-flex-center">
+          <div>
+            <h1 class="hero__typography">
+              <p class="cosy boska-regular">Cosy</p>
+              <p class="cabin boska-regular">Cabin</p>
+              <p class="in__the">In The</p>
+              <p class="woods boska-regular">Woods!</p>
+            </h1>
+
+            <p class="hero__description">
+              Jack built The Wilderness Retreat because he had always dreamed of
+              having a cabin in the wilderness where he could escape the
+              stresses of everyday life and reconnect with nature.
+            </p>
+          </div>
         </div>
       </section>
-    </main>
+      <!-- header section -->
+    </div>
+
+    <!-- main section-->
+    <main></main>
     <!-- main section-->
   </body>
 </html>
