--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <!-- <img src="/assets/images/circle-image.png" alt="" /> -->
         </div>
       </div>
-
       <!-- background element -->
+
       <!-- header section -->
       <header id="header-section" class="header__section">
         <nav class="nav container">
@@ -47,6 +47,7 @@
         </nav>
       </header>
 
+      <!-- hero section -->
       <section id="hero-section" class="hero__section">
         <div class="hero__text container text-center d-flex-center">
           <div>
@@ -65,11 +66,63 @@
           </div>
         </div>
       </section>
+      <!-- hero section -->
       <!-- header section -->
     </div>
-
     <!-- main section-->
-    <main></main>
+    <main>
+      <!-- showcase system -->
+      <div id="showcase-section" class="showcase__section">
+        <div class="container showcase__wrapper">
+          <div class="text__base-section">
+            <div>
+              <img src="assets/images/tree-typeG.svg" alt="" />
+            </div>
+            <div class="text__base__typography">
+              <p>
+                Welcome to our cosy cabin in the woods! Our rental home, nestled
+                in the heart of the forest, is the ideal retreat for nature
+                lovers and anyone looking for a peaceful escape from the hustle
+                and bustle of city life.
+              </p>
+            </div>
+          </div>
+
+          <div class="right__side-Section">
+            <div>
+              <div class="box__div__wrapper">
+                <!-- column 01 -->
+                <div>
+                  <p>Dense forest</p>
+                  <div class="showcase__box">
+                    <h4>20,291</h4>
+                    <span>m<sup>2</sup></span>
+                  </div>
+                </div>
+                <!-- column 02 -->
+                <div>
+                  <p>Living space</p>
+                  <div class="showcase__box">
+                    <h4>324</h4>
+                    <span>m<sup>2</sup></span>
+                  </div>
+                </div>
+
+                <!-- column 03 -->
+                <div>
+                  <p>Proximity to nearest town</p>
+                  <div class="showcase__box">
+                    <h4>30</h4>
+                    <span>minutes</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- showcase system -->
+    </main>
     <!-- main section-->
   </body>
 </html>
