feat: 🎸 sign up form done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- font inject -->
   </head>
   <body>
-    <div class="header__and__navbar">
+    <div class="header__and__navbar iconic__section">
       <!-- background element -->
       <div class="circle__dashed__line d-flex-center">
         <div class="circle__image-heroSection">
@@ -71,7 +71,7 @@
     </div>
     <!-- main section-->
     <main>
-      <!-- showcase system -->
+      <!-- showcase or info section -->
       <div id="showcase-section" class="showcase__section">
         <div class="container showcase__wrapper">
           <div class="text__base-section">
@@ -121,8 +121,43 @@
           </div>
         </div>
       </div>
-      <!-- showcase system -->
+      <!-- showcase or info section -->
+
+      <!-- forest section  -->
+      <div id="forest" class="forest__trees"></div>
+      <!-- forest section  -->
+
+      <!-- Sign up section -->
+      <div class="iconic__section sign__up">
+        <div class="sign__up__insider">
+          <img src="/assets/images/sky.png" alt="" />
+          <!-- Sign up content -->
+          <div class="sign__up__content">
+            <div class="sign__up__offer__text">
+              <h2>
+                Sign Up And
+                <span style="color: var(--light__green-color)">Get 10%</span>
+                Off Your Stay
+              </h2>
+              <p>
+                Not boring old news, just updates for our rentals. Take up on
+                our offers.
+              </p>
+            </div>
+            <div class="sign__up__form">
+              <input type="email" placeholder="Email address" />
+              <button>Get 10% Off</button>
+            </div>
+          </div>
+          <!-- Sign up content -->
+        </div>
+      </div>
+      <!-- Sign up section -->
     </main>
     <!-- main section-->
+
+    <!-- footer section -->
+    <footer class="footer__section"></footer>
+    <!-- footer section -->
   </body>
 </html>
