feat: 🎸 get to know each other

--- a/index.html
+++ b/index.html
@@ -153,6 +153,22 @@
         </div>
       </div>
       <!-- Sign up section -->
+
+      <!-- Get to know each other -->
+      <div id="get-to-know-section" class="get__to__know">
+        <div class="container get__to__know__wrapper">
+          <div class="get__to__know__text">
+            <h2>it's time to get to know each other!</h2>
+            <p>Grab a cup of coffee and...</p>
+            <button>Let's talk!</button>
+          </div>
+          <div class="get__to__know__typography">
+            <img src="/assets/images/tree-typeG.svg" alt="" srcset="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- Get to know each other -->
     </main>
     <!-- main section-->
 
