feat: 🎸 Done our unique rooms section

--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
       <div id="forest" class="forest__trees"></div>
       <!-- forest section  -->
 
+
+            <!-- Unique rooms -->
+      <div class="our__unique__rooms">
+        <div class="container our__unique__rooms__heading">
+          <h2>Our Unique Rooms Within The Wilderness Retreat</h2>
+          <div class=" our__unique__rooms__card">
+          <img src="/assets/images/Cabins.png" alt="">
+          <img src="/assets/images/cozy-cabins.png" alt="">
+          <img src="/assets/images/Cabins.png" alt="">
+        </div>
+        </div>
+
+      
+        
+      </div>
+      <!-- Unique rooms -->
+
+
       <!-- Sign up section -->
       <div class="iconic__section sign__up">
         <div class="sign__up__insider">
@@ -154,26 +172,122 @@
       </div>
       <!-- Sign up section -->
 
+      <!-- Experience The magic Of The Wilderness Retreat -->
+      <div class="experience__the__magic">
+        <div class="container experience__the__magic__heading">
+          <h2>Experience the Magic of The Wilderness Retreat</h2>
+          <p>
+            Welcome to our cosy cabin in the woods! Our rental home, nestled in
+            the heart of the forest.
+          </p>
+        </div>
+
+        <div class="experience__grid__cards">
+          <div class="experience__grid__card">
+            <img src="./assets/images/window-people.png" alt="" />
+            <div class="card__text__box">
+              <p>✌️</p>
+              <p>Peaceful</h6>
+              <p>
+                We had such a wonderful time at The Wilderness Retreat. The
+                cabin was cozy and co...
+              </p>
+            </div>
+          </div>
+          <div class="experience__grid__card">
+            <img src="./assets/images/cup.png" alt="" />
+            <div class="card__text__box">
+              <p>✌️</p>
+              <p>Peaceful</h6>
+              <p>
+                We had such a wonderful time at The Wilderness Retreat. The
+                cabin was cozy and co...
+              </p>
+            </div>
+          </div>
+          <div class="experience__grid__card">
+            <img src="./assets/images/frnd.png" alt="" />
+            <div class="card__text__box">
+              <p>✌️</p>
+              <p>Peaceful</h6>
+              <p>
+                We had such a wonderful time at The Wilderness Retreat. The
+                cabin was cozy and co...
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Experience The magic Of The Wilderness Retreat -->
+
       <!-- Get to know each other -->
       <div id="get-to-know-section" class="get__to__know">
         <div class="container get__to__know__wrapper">
           <div class="get__to__know__text">
             <h2>it's time to get to know each other!</h2>
             <p>Grab a cup of coffee and...</p>
-            <button>Let's talk!</button>
+            <img
+              src="/assets/images/get-know.svg"
+              class="lets__talk__btn"
+              alt=""
+            />
           </div>
           <div class="get__to__know__typography">
-            <img src="/assets/images/tree-typeG.svg" alt="" srcset="" />
+            <img src="/assets/images/tree-typeG.svg" alt="" />
           </div>
         </div>
       </div>
-
       <!-- Get to know each other -->
+
+      <!-- Lik -->
+      <div class="link__section">
+        <div id="about" class="about__box same__box">
+          <div>
+            <h2>About</h2>
+            <p>Us in a true way</p>
+            <img src="./assets/svg/arrow-down.svg" alt="" />
+          </div>
+        </div>
+        <div id="others" class="others__box iconic__section">
+          <div class="rooms">
+            <p>See our</p>
+            <div class="d-flex-center rooms__heading">
+              <h2>Rooms</h2>
+              <img src="./assets/svg/arrow-down-light.svg" alt="" />
+            </div>
+          </div>
+          <div class="contact">
+            <p>You can</p>
+            <div class="contact__heading d-flex-center">
+              <h2>Contact</h2>
+              <img src="./assets/svg/arrow-down-light.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Lik -->
     </main>
     <!-- main section-->
 
     <!-- footer section -->
-    <footer class="footer__section"></footer>
+    <footer class="footer__section">
+      <nav>
+        <ul class="d-flex-center">
+          <li>
+            <a href="#">Change Log</a>
+          </li>
+          <li>
+            <a href="#">Style Guide</a>
+          </li>
+          <li>
+            <a href="#">Licensing</a>
+          </li>
+          <li>
+            <a href="#">Instructions</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
     <!-- footer section -->
   </body>
 </html>
